<resources>
    <string name="app_name">Calculator</string>
    <string name="btn_Sqrt">√</string>
    <string name="btn_Square">SQ.</string>
    <string name="btn_Clr">C</string>
    <string name="btn_Back">Back</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="brn_Zero">0</string>
    <string name="btn_Decimal">.</string>
    <string name="btn_Plus">+</string>
    <string name="btn_Min">-</string>
    <string name="btn_Mul">X</string>
    <string name="btn_Equals">=</string>
    <string name="btn_Div">/</string>
    <string name="labelResult">Result:</string>
</resources>